--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.29",
+    "dotenv": "^16.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "dotenv": "^16.5.0"
   }
 }
