--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "npx playwright test",
+      "test-ui": "npx playwright test --project=chromium",
+      "test-api": "npx playwright test tests/api/",
+      "report": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
