--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,7 +31,7 @@ jobs:
         run: npx playwright test
 
       - name: Upload test results
-        uses: actions/upload-artifact@v4git 
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
