--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,40 +1,27 @@
 name: Playwright Tests
-
 on:
   push:
-    branches: [ main ]        # Run on push to 'main' branch
+    branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
-  tests:
-    timeout-minutes: 10
-    runs-on: ubuntu-latest     # Use Linux-based runner
-
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22'
-
-      - name: Install dependencies
-        run: |
-          npm ci
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --force
-
-      - name: Run Playwright tests
-        run: npx playwright test
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 7
-
-          
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
